RESOLVED FIXED145123
[EFL] Fix unsequenced warning in MiniBrowser's main.c
https://bugs.webkit.org/show_bug.cgi?id=145123
Summary [EFL] Fix unsequenced warning in MiniBrowser's main.c
Csaba Osztrogonác
Reported 2015-05-18 02:59:17 PDT
../../Tools/MiniBrowser/efl/main.c:572:17: warning: multiple unsequenced modifications to 'mode' [-Wunsequenced]
Attachments
Patch (1.39 KB, patch)
2015-05-18 03:00 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-05-18 03:00:18 PDT
WebKit Commit Bot
Comment 2 2015-05-18 19:02:18 PDT
Comment on attachment 253319 [details] Patch Clearing flags on attachment: 253319 Committed r184539: <http://trac.webkit.org/changeset/184539>
WebKit Commit Bot
Comment 3 2015-05-18 19:02:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.