[EFL] Fix unsequenced warning in MiniBrowser's main.c https://bugs.webkit.org/show_bug.cgi?id=145123

Reviewed by Gyuyoung Kim.

* MiniBrowser/efl/main.c:
(on_key_down):


Canonical link: https://commits.webkit.org/163158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184539 268f45cc-cd09-0410-ab3c-d52691b4dbfc